--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-/>
-    <link rel="stylesheet" href="estilos/style.css"/>
+    />
+    <link rel="stylesheet" href="estilos/style.css" />
 
     <title>Arcane - Tienda Online</title>
   </head>
@@ -52,21 +52,20 @@
                 placeholder="¿Qué estás buscando?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline" type="submit">
-                Buscar
-              </button>
+              <button class="btn btn-outline" type="submit">Buscar</button>
             </form>
           </section>
         </div>
       </nav>
 
       <!--LOGO-->
-      <div class="container-fluid"></div>
-      <div class="d-flex justify-content-center pt-5 mt-4">
-        <img src="./imgs/logoarcane.png" alt="logoarcane" />
-      </div>
-      <div class="d-flex justify-content-center pb-5">
-        <h2 class="fst-light fs-4">Comics & Mangas</h2>
+      <div class="container-fluid">
+        <div class="d-flex justify-content-center pt-5 mt-4">
+          <img src="./imgs/logoarcane.png" alt="logoarcane" />
+        </div>
+        <div class="d-flex justify-content-center pb-5">
+          <h2 class="fst-light fs-4">Comics & Mangas</h2>
+        </div>
       </div>
       <!--END LOGO-->
 
@@ -257,216 +256,216 @@
 
       <!--DESTACADOS-->
 
-      <div class="container-fluid bg-light p-1">
-        <h2 class="text-center mt-3 fs-3">Destacados</h2>
-        <div class="container">
-          <hr class="p-1" />
-        </div>
-      </div>
-
-      <div class="container-fluid bg-light d-flex justify-content-center">
-        <div class="row card-group w-100 mt-2 mb-5 ms-5 p-3">
-          <div class="card bg-light me-5">
-            <img
-              src="./imgs/sololeveling.jpg"
-              class="card-img-top mt-3"
-              alt="destacados"
-            />
-            <div class="card-body">
-              <h5
-                class="card-title text-dark fs-6 d-flex justify-content-center"
-              >
-                Solo Leveling
-              </h5>
-              <h6
-                class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
-              >
-                Chu-Gong
-              </h6>
-            </div>
-            <div class="card-footer">
-              <medium
-                class="badge text-wrap fs-6 d-flex justify-content-center"
-                >$ 2500</medium
-              >
-              <div class="d-grid gap-2 col-9 mx-auto">
-                <button
-                  type="button"
-                  class="btn btn-outline btn-small p-1 mb-1 mt-2"
-                >
-                  Agregar al carrito
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-light me-5 border-start">
-            <img
-              src="./imgs/komi.jpg"
-              class="card-img-top mt-3"
-              alt="destacados"
-            />
-            <div class="card-body">
-              <h5
-                class="card-title text-dark fs-6 d-flex justify-content-center"
-              >
-                Komi-san
-              </h5>
-              <h6
-                class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
-              >
-                Tomohito Oda
-              </h6>
-            </div>
-            <div class="card-footer">
-              <medium
-                class="badge text-wrap fs-6 d-flex justify-content-center"
-                >$ 1200</medium
-              >
-              <div class="d-grid gap-2 col-9 mx-auto">
-                <button
-                  type="button"
-                  class="btn btn-outline btn-small p-1 mb-1 mt-2"
-                >
-                  Agregar al carrito
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-light me-5 border-start">
-            <img
-              src="./imgs/jujutsu.jpg"
-              class="card-img-top mt-3"
-              alt="destacados"
-            />
-            <div class="card-body">
-              <h5
-                class="card-title text-dark fs-6 d-flex justify-content-center"
-              >
-                Jujutsu Kaisen
-              </h5>
-              <h6
-                class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
-              >
-                Gege Akutami
-              </h6>
-            </div>
-            <div class="card-footer">
-              <medium
-                class="badge text-wrap fs-6 d-flex justify-content-center"
-                >$ 700</medium
-              >
-              <div class="d-grid gap-2 col-9 mx-auto">
-                <button
-                  type="button"
-                  class="btn btn-outline btn-small p-1 mb-1 mt-2"
-                >
-                  Agregar al carrito
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-light me-5 border-start">
-            <img
-              src="./imgs/dressup.jpg"
-              class="card-img-top mt-3"
-              alt="destacados"
-            />
-            <div class="card-body">
-              <h5
-                class="card-title text-dark fs-6 d-flex justify-content-center"
-              >
-                My Dress-Up Darling
-              </h5>
-              <h6
-                class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
-              >
-                Shin'ichi Fukuda
-              </h6>
-            </div>
-            <div class="card-footer">
-              <medium
-                class="badge text-wrap fs-6 d-flex justify-content-center"
-                >$ 750</medium
-              >
-              <div class="d-grid gap-2 col-9 mx-auto">
-                <button
-                  type="button"
-                  class="btn btn-outline btn-small p-1 mb-1 mt-2"
-                >
-                  Agregar al carrito
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-light me-5 border-start">
-            <img
-              src="./imgs/tenki.jpg"
-              class="card-img-top mt-3"
-              alt="destacados"
-            />
-            <div class="card-body">
-              <h5
-                class="card-title text-dark fs-6 d-flex justify-content-center"
-              >
-                Weathering with You
-              </h5>
-              <h6
-                class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
-              >
-                Makoto Shinkai
-              </h6>
-            </div>
-            <div class="card-footer">
-              <medium
-                class="badge text-wrap fs-6 d-flex justify-content-center"
-                >$ 700</medium
-              >
-              <div class="d-grid gap-2 col-9 mx-auto">
-                <button
-                  type="button"
-                  class="btn btn-outline btn-small p-1 mb-1 mt-2"
-                >
-                  Agregar al carrito
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-light me-5 border-start">
-            <img
-              src="./imgs/kaguya.png"
-              class="card-img-top mt-3"
-              alt="destacados"
-            />
-            <div class="card-body">
-              <h5
-                class="card-title text-dark fs-6 d-flex justify-content-center"
-              >
-                Kaguya-sama: Love is War
-              </h5>
-              <h6
-                class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
-              >
-                Aka Akasaka
-              </h6>
-            </div>
-            <div class="card-footer">
-              <medium
-                class="badge text-wrap fs-6 d-flex justify-content-center"
-                >$ 700</medium
-              >
-              <div class="d-grid gap-2 col-9 mx-auto">
-                <button
-                  type="button"
-                  class="btn btn-outline btn-small p-1 mb-1 mt-2"
-                >
-                  Agregar al carrito
-                </button>
-              </div>
-            </div>
+        <div class="container-fluid p-1">
+          <h2 class="text-center mt-3 fs-3">Destacados</h2>
+          <div class="container">
+            <hr class="hr p-1" />
           </div>
         </div>
-      </div>
 
+        <div class="d-flex justify-content-evenly">
+          <div class="row card-group w-100 mt-2 mb-5 ms-5 p-3">
+            <div class="card bg-light me-5">
+              <img
+                src="./imgs/sololeveling.jpg"
+                class="card-img-top mt-3"
+                alt="destacados"
+              />
+              <div class="card-body">
+                <h5
+                  class="card-title text-dark fs-6 d-flex justify-content-center"
+                >
+                  Solo Leveling
+                </h5>
+                <h6
+                  class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
+                >
+                  Chu-Gong
+                </h6>
+              </div>
+              <div class="card-footer">
+                <medium
+                  class="badge text-wrap fs-6 d-flex justify-content-center"
+                  >$ 2500</medium
+                >
+                <div class="d-grid gap-2 col-9 mx-auto">
+                  <button
+                    type="button"
+                    class="btn btn-outline btn-small p-1 mb-1 mt-2"
+                  >
+                    Agregar al carrito
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-light me-5 border-start">
+              <img
+                src="./imgs/komi.jpg"
+                class="card-img-top mt-3"
+                alt="destacados"
+              />
+              <div class="card-body">
+                <h5
+                  class="card-title text-dark fs-6 d-flex justify-content-center"
+                >
+                  Komi-san
+                </h5>
+                <h6
+                  class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
+                >
+                  Tomohito Oda
+                </h6>
+              </div>
+              <div class="card-footer">
+                <medium
+                  class="badge text-wrap fs-6 d-flex justify-content-center"
+                  >$ 1200</medium
+                >
+                <div class="d-grid gap-2 col-9 mx-auto">
+                  <button
+                    type="button"
+                    class="btn btn-outline btn-small p-1 mb-1 mt-2"
+                  >
+                    Agregar al carrito
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-light me-5 border-start">
+              <img
+                src="./imgs/jujutsu.jpg"
+                class="card-img-top mt-3"
+                alt="destacados"
+              />
+              <div class="card-body">
+                <h5
+                  class="card-title text-dark fs-6 d-flex justify-content-center"
+                >
+                  Jujutsu Kaisen
+                </h5>
+                <h6
+                  class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
+                >
+                  Gege Akutami
+                </h6>
+              </div>
+              <div class="card-footer">
+                <medium
+                  class="badge text-wrap fs-6 d-flex justify-content-center"
+                  >$ 700</medium
+                >
+                <div class="d-grid gap-2 col-9 mx-auto">
+                  <button
+                    type="button"
+                    class="btn btn-outline btn-small p-1 mb-1 mt-2"
+                  >
+                    Agregar al carrito
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-light me-5 border-start">
+              <img
+                src="./imgs/dressup.jpg"
+                class="card-img-top mt-3"
+                alt="destacados"
+              />
+              <div class="card-body">
+                <h5
+                  class="card-title text-dark fs-6 d-flex justify-content-center"
+                >
+                  My Dress-Up Darling
+                </h5>
+                <h6
+                  class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
+                >
+                  Shin'ichi Fukuda
+                </h6>
+              </div>
+              <div class="card-footer">
+                <medium
+                  class="badge text-wrap fs-6 d-flex justify-content-center"
+                  >$ 750</medium
+                >
+                <div class="d-grid gap-2 col-9 mx-auto">
+                  <button
+                    type="button"
+                    class="btn btn-outline btn-small p-1 mb-1 mt-2"
+                  >
+                    Agregar al carrito
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-light me-5 border-start">
+              <img
+                src="./imgs/tenki.jpg"
+                class="card-img-top mt-3"
+                alt="destacados"
+              />
+              <div class="card-body">
+                <h5
+                  class="card-title text-dark fs-6 d-flex justify-content-center"
+                >
+                  Weathering with You
+                </h5>
+                <h6
+                  class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
+                >
+                  Makoto Shinkai
+                </h6>
+              </div>
+              <div class="card-footer">
+                <medium
+                  class="badge text-wrap fs-6 d-flex justify-content-center"
+                  >$ 700</medium
+                >
+                <div class="d-grid gap-2 col-9 mx-auto">
+                  <button
+                    type="button"
+                    class="btn btn-outline btn-small p-1 mb-1 mt-2"
+                  >
+                    Agregar al carrito
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-light me-5 border-start">
+              <img
+                src="./imgs/kaguya.png"
+                class="card-img-top mt-3"
+                alt="destacados"
+              />
+              <div class="card-body">
+                <h5
+                  class="card-title text-dark fs-6 d-flex justify-content-center"
+                >
+                  Kaguya-sama: Love is War
+                </h5>
+                <h6
+                  class="card-subtitle text-secondary fst-italic opacity-50 fw-light d-flex justify-content-center"
+                >
+                  Aka Akasaka
+                </h6>
+              </div>
+              <div class="card-footer">
+                <medium
+                  class="badge text-wrap fs-6 d-flex justify-content-center"
+                  >$ 700</medium
+                >
+                <div class="d-grid gap-2 col-9 mx-auto">
+                  <button
+                    type="button"
+                    class="btn btn-outline btn-small p-1 mb-1 mt-2"
+                  >
+                    Agregar al carrito
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+     
       <!--END DESTACADOS-->
       <!--SEGUNDO CAROUSEL-->
 
