--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -69,7 +69,7 @@
         <div class="container-fluid">
           <h2 class="text-center mt-3 fs-3">Contacto</h2>
           <div class="container">
-            <hr class="p-1" />
+            <hr class="hr p-1" />
           </div>
         </div>
 
