--- a/secciones/novedades.html
+++ b/secciones/novedades.html
@@ -67,14 +67,11 @@
     </nav>
     <!--END NAV-->
     <main>
-      <div class="container-fluid bg-light p-1">
+      <div class="bg-color container-fluid bg-light p-1">
         <h2 class="text-center mt-3 fs-3">Novedades</h2>
-        <div class="container">
-          <hr class="p-1" />
-        </div>
       </div>
       <!--PRIMERA SECCIÓN-->
-      <div class="container-fluid bg-light d-flex justify-content-center">
+      <div class="container-fluid d-flex justify-content-center">
         <div class="row card-group w-100 mt-2 mb-4 ms-5 p-3">
           <div class="card bg-light me-5">
             <img
