--- a/secciones/comics.html
+++ b/secciones/comics.html
@@ -67,11 +67,11 @@
     <!--END NAV-->
     <main>
       <div class="bg-color container-fluid p-1">
-        <h2 class="text-center mt-3 fs-3">Sección Comics</h2>
+        <h2 class="text-center mt-2 fs-4">Sección Comics</h2>
       </div>
       <!--PRIMERA SECCIÓN-->
-      <div class="container-fluid d-flex justify-content-center">
-        <div class="row card-group w-100 mt-2 mb-4 ms-5 p-3">
+      <div class="container-fluid bg-light d-flex justify-content-center">
+        <div class="row card-group w-100 mt-4 mb-4 ms-5 p-3">
           <div class="card bg-light me-5">
             <img
               src="../imgs/batgirl.jpg"
