--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -187,26 +187,29 @@
         </div>
 <!--end carousel-->
 
-        <div class="container-fluid text-center text-secondary">
+        <div class="container text-center text-secondary">
           <h3 class="contactotxt fs-5">
             ¿Querés recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a
             disfrutarlas!
           </h3>
+        </div>
+        <div class="row d-flex justify-content-center">
           <section
             id="contacto"
-            class="contacto-section d-flex justify-content-center mt-4"
+            class="col-8 contacto-section d-flex justify-content-center mt-4"
           >
             <div class="form-floating">
-              <input
-                type="email"
-                class="form-control"
-                id="floatingInput"
-                placeholder="name@example.com"
-              />
-              <label for="floatingInput">Email</label>
-              <button class="btn mt-3 btn-outline" type="submit">Enviar</button>
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Email"
+                  aria-label="Search"
+                />
+              <button class="btn btn-outline" type="submit">Enviar</button>
             </div>
           </section>
+         </div>
         </div>
       </div>
     </main>
