--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -65,15 +65,11 @@
       </div>
     </nav>
     <main>
-      <div class="container-fluid p-5">
-        <div class="container-fluid">
-          <h2 class="text-center mt-2 fs-3">Contacto</h2>
-          <div class="container">
-            <hr class="hr p-1"/>
-          </div>
-        </div>
-
-        <div class="container-fluid mt-5 p-5 w-25 mb-5">
+      <div class="bg-color bg-light p-1">
+        <h2 class="text-center mt-2 fs-4">Contacto</h2>
+      </div>
+      <div class="bg-image container-fluid p-1">
+        <div class="bg-contacto container-fluid mt-3 p-4 w-25 mb-4">
           <div class="container">
             <label for="exampleFormControlInput1" class="form-label"
               >Nombre</label
@@ -83,6 +79,16 @@
           <div class="container mb-3 mt-2">
             <label for="exampleFormControlInput1" class="form-label"
               >Email</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="exampleFormControlInput1"
+            />
+          </div>
+          <div class="container mb-3 mt-2">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Teléfono</label
             >
             <input
               type="email"
@@ -104,6 +110,7 @@
             <button type="button" class="btn btn-outline-dark">Enviar</button>
           </section>
         </div>
+       </div>
       </div>
 
       <!--carousel-->
@@ -217,6 +224,12 @@
     <!--START FOOTER-->
 
     <footer class="footer container-fluid bg-dark p-1">
+      <div class="container text-start text-secondary mt-3">
+        <p>5492236024265</p>
+        <p>+5492236024265</p>
+        <p>tienda@arcaneonline.com</p>
+        <p>Sarmiento 1388, Mar del Plata - Argentina</p>      
+       </div>
       <div class="container-fluid text-secondary text-center">
         <section class="mt-5">
           <p id="copy">
