--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -224,11 +224,11 @@
     <!--START FOOTER-->
 
     <footer class="footer container-fluid bg-dark p-1">
-      <div class="container text-start text-secondary mt-3">
-        <p>5492236024265</p>
-        <p>+5492236024265</p>
-        <p>tienda@arcaneonline.com</p>
-        <p>Sarmiento 1388, Mar del Plata - Argentina</p>      
+      <div class="datosc container text-start mt-3">
+        <p class="dat--contact">5492236024265</p>
+        <p class="dat--contact">+5492236024265</p>
+        <p class="dat--contact">tienda@arcaneonline.com</p>
+        <p class="dat--contact">Sarmiento 1388, Mar del Plata - Argentina</p>      
        </div>
       <div class="container-fluid text-secondary text-center">
         <section class="mt-5">
